Bug 352824 - libmarblewidget master needs soversion bump
Summary: libmarblewidget master needs soversion bump
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-17 08:15 UTC by Harald Sitter
Modified: 2015-09-22 18:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2015-09-17 08:15:06 UTC
Marble master has at least 2 changes that are source and binary incompatible requiring the library to have its so-version increased from 22 to 23

The following symbol was lost to the eons
> Marble::GeoDataStyle::GeoDataStyle(QImage const&, QFont const&, QColor const&)
as it was changed from QImage to QString.

GeoDataStyle has had its header installed as part of 15.08
> -- Installing: /«PKGBUILDDIR»/debian/tmp/usr/include/marble/GeoDataStyle.h
making this a BIC.

Additionally the following public qtquick class was removed entirely from the library:
MarbleQuickItem
> -- Installing: /«PKGBUILDDIR»/debian/tmp/usr/include/marble/MarbleQuickItem.h


Reproducible: Always
Comment 1 Alexander Potashev 2015-09-22 18:25:45 UTC
Git commit 0eb31ad760884b3006def6b41d8654976aa7650d by Alexander Potashev.
Committed on 22/09/2015 at 18:22.
Pushed by aspotashev into branch 'master'.

Version bump to 0.22.20 (0.23 development version)

This is done mainly to bump the SOVERSION.

M  +1    -1    src/apps/marble-ui/ControlView.cpp
M  +2    -2    src/lib/marble/CMakeLists.txt
M  +2    -2    src/lib/marble/MarbleGlobal.h

http://commits.kde.org/marble/0eb31ad760884b3006def6b41d8654976aa7650d