Version bump to 0.22.20 (0.23 development version)

This is done mainly to bump the SOVERSION.

BUG: 352824